--- a/cardapio.css
+++ b/cardapio.css
@@ -7,7 +7,7 @@
 
 .menu {
     align-items: center;
-    padding-left: 25%;
+    padding-left: 33%;
     display: flex;
     gap: 100px;
     padding-top: 20px;
@@ -34,6 +34,7 @@ header {
 .links li {
     display: inline;
     margin-left: 40px;
+    cursor: pointer;
 }
 
 ul {
@@ -50,10 +51,11 @@ ul {
     font-weight: 800;
     padding-right: 20px;
     margin-top: 20px;   
+    cursor: pointer;
 }
 
 
-.bolo-chefe {
+.bolo-chefe  {
     display: flex;
     align-items: center; 
     gap: 20px; 
@@ -83,14 +85,79 @@ p {
 .brigadeiros {
     display: flex;
     justify-content: center;
-    gap: 60px;
+    gap: 100px;
     align-items: center;
-    padding-top: 20px;
+    padding-top: 40px;
+    cursor: pointer;
 }
 
 .doces {
     border-radius: 100%;
 }
+
+.card {
+ background-color: #fff;
+ width: 180px;
+ height: 250px;
+ border-radius: 12px;
+ box-shadow: 4px 4px 12px #aaaa;
+}
+
+.card img {
+    width: 100%;
+    height: 130px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+}
+
+.card div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+    height: 50%;
+
+}
+
+.card h1 {
+    font-size: 1.2rem;
+    text-align: center;
+
+}
+
+.card h2 {
+    font-size: .9rem;
+    color: #aaaa;
+    text-align: center;
+}
+
+.card button {
+    border: none;
+    padding: 4px;
+    width: 80%;
+    color: #fff;
+    font-size: 1rem;
+    font-weight: bold;
+    border-radius: 3px;
+  }
+
+li {
+    margin-left: 10px;
+}
+
+video {
+    margin-left: 750px;
+    margin-top: -319px;
+}
+
+h3 {
+    font-size: 21px;
+    margin-left: 132px;
+    margin-top: 370px;
+}
+
+
 
 
 
