--- a/cardapio.css
+++ b/cardapio.css
@@ -29,12 +29,14 @@
 
 header {
     background-color: #DB7093;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.9);
 }
 
 .links li {
     display: inline;
     margin-left: 40px;
     cursor: pointer;
+    
 }
 
 ul {
@@ -57,21 +59,27 @@ ul {
 
 .bolo-chefe  {
     display: flex;
-    align-items: center; 
+    align-items: center;  
+    justify-content: center;  
     gap: 20px; 
     margin-left: 50px;
     padding-top: 70px;
+    text-align: center; 
+    
 }
+
 
 .bolo {
     flex-shrink: 0; 
     border-radius: 10px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.9);
 }
 
 .texto {
     display: flex;
     flex-direction: column; 
     max-width: 600px;
+    
 }
 
 h1 {
@@ -89,6 +97,7 @@ p {
     align-items: center;
     padding-top: 40px;
     cursor: pointer;
+    margin-bottom: 15px;
 }
 
 .doces {
@@ -101,7 +110,14 @@ p {
  height: 250px;
  border-radius: 12px;
  box-shadow: 4px 4px 12px #aaaa;
+ transition: transform 0.3s ease, box-shadow 0.5s ease;
 }
+
+.card:hover {
+    transform: scale(1.09); 
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+}
+
 
 .card img {
     width: 100%;
@@ -156,6 +172,27 @@ h3 {
     margin-left: 132px;
     margin-top: 370px;
 }
+
+
+.instagram-link {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 40px;
+    right: 109px;
+    background: rgb(233, 0, 255);
+    background: linear-gradient(0deg, rgba(233, 0, 255, 1) 0%, rgba(178, 34, 34, 1) 26%, rgba(255, 165, 0, 1) 69%);
+    color: #fff;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 36px;
+    box-shadow: 1px 1px 2px #888;
+    z-index: 1000;
+}
+
+
+
+
 
 
 
