--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     font-family: "Playwrite GB S", cursive;
 }
 
+body{
+    background-color: pink;
+}
+
 header {
     background: url("./preços/fundofundo.jpg");
     padding: 10px;
@@ -32,7 +36,7 @@ header {
     text-align: center;
     margin-top: 20px;
     gap: 50px;
-    color: #DA70D6;
+    color: white;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
