--- a/cardapio.css
+++ b/cardapio.css
@@ -22,7 +22,7 @@ body{
     margin-bottom: 10px;
 }
 
-.meu-input {
+#search {
     width: 400px;
     border-radius: 20px;
     padding: 10px;
@@ -106,6 +106,7 @@ p {
 
 .doces {
     border-radius: 100%;
+    object-fit: cover;
 }
 
 .card {
@@ -115,6 +116,7 @@ p {
  border-radius: 12px;
  box-shadow: 4px 4px 12px #aaaa;
  transition: transform 0.3s ease, box-shadow 0.5s ease;
+ 
 }
 
 .card:hover {
@@ -128,6 +130,7 @@ p {
     height: 130px;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
+    
 }
 
 .card div{
