--- a/kitfesta.css
+++ b/kitfesta.css
@@ -14,6 +14,7 @@ body {
     padding-top: 100px;
     margin-top: 140px;
     background-color: pink;
+    
 }
 
 .brigadeiros {
@@ -21,6 +22,7 @@ body {
     flex-wrap: wrap;
     gap: 35px;
     justify-content: center;
+    
 
 }
 
@@ -28,6 +30,7 @@ body {
     width: calc(23% - 20px);
     text-align: center;
     margin-bottom: 20px;
+    border: 2px solid black;
 }
 
 
@@ -37,10 +40,9 @@ body {
     margin-top: 20px;
     border-radius: 10px;
     object-fit: cover;
+    border: 2px solid black;
 }
 
-
-h1,
 h2 {
     margin: 10px 0;
     font-family: "Playwrite GB S", cursive;
