--- a/cardapio.css
+++ b/cardapio.css
@@ -5,7 +5,7 @@
     font-family: "Playwrite GB S", cursive;
 }
 
-body{
+body {
     background-color: pink;
 }
 
@@ -42,7 +42,7 @@ header {
     display: inline;
     margin-left: 40px;
     cursor: pointer;
-    
+
 }
 
 ul {
@@ -58,42 +58,42 @@ ul {
     font-size: 15px;
     font-weight: 800;
     padding-right: 20px;
-    margin-top: 20px;   
+    margin-top: 20px;
     cursor: pointer;
 }
 
 
-.bolo-chefe  {
+.bolo-chefe {
     display: flex;
-    align-items: center;  
-    justify-content: center;  
-    gap: 20px; 
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
     margin-left: 50px;
     padding-top: 70px;
-    text-align: center; 
-    
+    text-align: center;
+
 }
 
 
 .bolo {
-    flex-shrink: 0; 
+    flex-shrink: 0;
     border-radius: 10px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.9);
 }
 
 .texto {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     max-width: 600px;
-    
+
 }
 
 h1 {
-    margin-top: 0; 
+    margin-top: 0;
 }
 
 p {
-    margin: 10px 0 0; 
+    margin: 10px 0 0;
 }
 
 .brigadeiros {
@@ -104,30 +104,30 @@ p {
     padding-top: 40px;
     cursor: pointer;
     margin-bottom: 15px;
-   
+
 }
 
 .doces {
     border-radius: 100%;
     object-fit: cover;
     border: 3px solid black;
-   
+
 }
 
 .card {
- background-color: #fff;
- width: 180px;
- height: 250px;
- border-radius: 12px;
- box-shadow: 4px 4px 12px #aaaa;
- transition: transform 0.3s ease, box-shadow 0.5s ease;
- border: 2px solid black;
- 
- 
+    background-color: #fff;
+    width: 180px;
+    height: 250px;
+    border-radius: 12px;
+    box-shadow: 4px 4px 12px #aaaa;
+    transition: transform 0.3s ease, box-shadow 0.5s ease;
+    border: 2px solid black;
+
+
 }
 
 .card:hover {
-    transform: scale(1.09); 
+    transform: scale(1.09);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
 }
 
@@ -137,25 +137,25 @@ p {
     height: 130px;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
-    
-    
+
+
 }
 
-.card div{
+.card div {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 4px;
     height: 50%;
-    
+
 
 }
 
 .card h1 {
     font-size: 1.2rem;
     text-align: center;
-    
+
 
 }
 
@@ -163,7 +163,7 @@ p {
     font-size: .9rem;
     color: #aaaa;
     text-align: center;
-    
+
 }
 
 .card button {
@@ -174,8 +174,8 @@ p {
     font-size: 1rem;
     font-weight: bold;
     border-radius: 3px;
-    
-  }
+
+}
 
 li {
     margin-left: 10px;
@@ -205,7 +205,7 @@ h3 {
     font-size: 20px;
     cursor: pointer;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.9);
- 
+
 }
 
 .botao {
@@ -240,7 +240,8 @@ h3 {
 
 
 
-.present, .fest {
+.present,
+.fest {
     background-color: #fff;
     width: 300px;
     height: 400px;
@@ -248,100 +249,110 @@ h3 {
     transition: transform 0.3s ease, box-shadow 0.5s ease;
     margin-right: 50px;
     border: 2px solid black;
-   }
+}
 
 
-   .docinho {
+.docinho {
     width: 300px;
     height: 300px;
-    
-   }
-   
-   .fest:hover {
+
+}
+
+.fest:hover {
     transform: scale(1.06);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
     cursor: pointer;
-    
-   }
-   .present:hover{
+
+}
+
+.present:hover {
     transform: scale(1.06);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
     cursor: pointer;
-   
-   }
+
+}
 
 
 
-   @media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
 
-    /* Menu */
+
+    #search {
+        width: 329px;
+        border-radius: 20px;
+        padding: 5px;
+        border: 2px solid #ccc;
+        text-align: center;
+        font-size: 15px;
+        margin-bottom: 10px;
+    }
+
     .menu {
-        flex-direction: column; /* Menu em coluna */
+        flex-direction: column;
         padding-left: 0;
         gap: 20px;
         padding-top: 10px;
     }
 
-    /* Header */
     header {
-        padding: 10px;
+        padding: 2px;
     }
 
-    /* Cards de produtos */
     .card {
-        width: 150px; /* Ajusta a largura dos cards */
+        width: 150px;
         height: 200px;
     }
 
-    /* Brigadeiros */
     .brigadeiros {
-        flex-direction: column;
-        gap: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 70px;
+        padding-top: 25px;
+        font-size: 12px;
+        text-align: center;
+        
     }
 
-    /* Texto */
+    li {
+        margin-left: 10px;
+        margin-top: 12px;
+        text-align: justify;
+    }
+    
     .texto {
-        max-width: 100%; /* Texto ocupa a largura total */
+        max-width: 100%;
         margin: 10px;
     }
 
-
-
-    /* Ajustes gerais nos botões fixos */
-    .check-list, .botao {
+    .check-list,
+    .botao {
         font-size: 18px;
         padding: 10px 20px;
         bottom: 10px;
     }
-
-    /* Bolo e brigadeiros */
+    
     .bolo-chefe {
         flex-direction: column;
         margin-left: 0;
     }
 
-    /* Ajustando o tamanho dos cards de produtos e de doces */
-    .present, .fest, .docinho {
-        width: 100%;
+    .present,
+    .fest,
+    .docinho {
+        width: 90%;
         height: auto;
         margin-right: 0;
-        padding: 10px;
+        padding: 1px;
     }
-}
 
+    .check-list, .botao {
+        font-size: 12px;
+        padding: 10px 20px;
+        bottom: 10px;
+        position: static;
+    }
 
+    
 
-
- 
-   
- 
- 
-   
- 
-   
   
- 
-
-
-
-
+}
