--- a/kitfesta.css
+++ b/kitfesta.css
@@ -1,59 +1,55 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Playwrite GB S", cursive;
-}
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    font-family: "Playwrite GB S", cursive;
-    padding-top: 100px;
-    margin-top: 140px;
-    background-color: pink;
-    
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
 
 .brigadeiros {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 35px;
-    justify-content: center;
+    display: grid; 
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 20px; 
+    margin: 0 auto; 
+    background-color: palevioletred;
+    object-fit: cover
+}
+
+
+.card {
     
-
-}
-
-.card {
-    width: calc(23% - 20px);
+    border-radius: 8px;
+    overflow: hidden;
     text-align: center;
-    margin-bottom: 20px;
-    border: 2px solid black;
-}
-
-
-.doces {
-    width: 300px;
-    height: 300px;
-    margin-top: 20px;
-    border-radius: 10px;
-    object-fit: cover;
-    border: 2px solid black;
-}
-
-h2 {
-    margin: 10px 0;
-    font-family: "Playwrite GB S", cursive;
-}
-
-.card {
-    background-color: #fff;
-    border-radius: 12px;
-    box-shadow: 4px 4px 12px #aaaa;
+    padding: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.9);
+    width: 100%; 
+    max-width: 350px; 
+    margin: 0 auto; 
     transition: transform 0.3s ease, box-shadow 0.5s ease;
     cursor: pointer;
+    background-color: white;
+    object-fit: cover
+}
+
+
+.card img {
+    width: 100%; 
+    height: 300px; 
+    object-fit: cover
+    
+}
+
+
+.card h1 {
+    font-size: 16px;
+    margin: 10px 0;
+}
+
+.card h2 {
+    font-size: 14px;
+    color: #888;
 }
 
 .card:hover {
@@ -61,34 +57,23 @@ h2 {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
 }
 
-.card h1 {
-    font-size: 1.2rem;
-    text-align: center;
-
-}
-
-.card h2 {
-
-    color: #aaaa;
-    text-align: center;
-}
-
-
 
 @media screen and (max-width: 1024px) {
-    .card {
-        width: calc(33.33% - 20px); /* 3 colunas em telas médias */
+    .brigadeiros {
+        grid-template-columns: repeat(2, 1fr); 
     }
 }
+
 
 @media screen and (max-width: 768px) {
-    .card {
-        width: calc(50% - 20px); /* 2 colunas em telas pequenas */
+    .brigadeiros {
+        grid-template-columns: 1fr; 
     }
 }
 
+
 @media screen and (max-width: 480px) {
-    .card {
-        width: calc(100% - 20px); /* 1 coluna em telas muito pequenas */
+    .brigadeiros {
+        grid-template-columns: 1fr; 
     }
 }
